fix main screen overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,10 +3,14 @@
     padding-top: 80px;
     /*min-height: 100vh;*/
 }
+body {
+    overflow: hidden;
+}
 .background-main {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    position: absolute;
     overflow: hidden;
 }
 .telegram-a {
